<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>pdns-data-loader</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>kotlin-maven-plugin</artifactId>
        <configuration>
          <args>
            <arg>-Xjsr305=strict</arg>
          </args>
          <compilerPlugins>
            <plugin>spring</plugin>
          </compilerPlugins>
        </configuration>
        <dependencies>
          <dependency>
            <artifactId>kotlin-maven-allopen</artifactId>
            <groupId>org.jetbrains.kotlin</groupId>
            <version>${kotlin.version}</version>
          </dependency>
        </dependencies>
        <groupId>org.jetbrains.kotlin</groupId>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <to>
            <image>registry.hitnslab.com/dns-security/pdns-data-loader</image>
          </to>
          <from>
            <image>gcr.azk8s.cn/distroless/java:11</image>
          </from>
          <container>
            <labels>
              <label>maintainer="Yanzhe Lee &lt;lee.yanzhe@yanzhe.org&gt;"</label>
            </labels>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
            <workingDirectory>/app</workingDirectory>
            <format>OCI</format>
            <user>1001:1001</user>
            <volumes>
              <volume>/datasource</volume>
            </volumes>
            <jvmFlags>
              <jvmFlag>-server</jvmFlag>
              <jvmFlag>-Xmx4g</jvmFlag>
              <jvmFlag>-Xlog:gc*:gc.log</jvmFlag>
            </jvmFlags>
          </container>
        </configuration>
      </plugin>
    </plugins>
    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
    <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-batch</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>kotlin-reflect</artifactId>
      <groupId>org.jetbrains.kotlin</groupId>
    </dependency>
    <dependency>
      <artifactId>kotlin-stdlib</artifactId>
      <groupId>org.jetbrains.kotlin</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>kotlin-logging</artifactId>
      <groupId>io.github.microutils</groupId>
      <version>1.7.6</version>
    </dependency>
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
      <version>28.1-jre</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
    <dependency>
      <artifactId>mariadb-java-client</artifactId>
      <groupId>org.mariadb.jdbc</groupId>
      <version>2.5.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
    <dependency>
      <artifactId>HikariCP</artifactId>
      <groupId>com.zaxxer</groupId>
    </dependency>
    <!--Kafka-->
    <dependency>
      <artifactId>spring-kafka</artifactId>
      <groupId>org.springframework.kafka</groupId>
    </dependency>
    <!--Protobuf-->
    <dependency>
      <artifactId>protobuf-java</artifactId>
      <groupId>com.google.protobuf</groupId>
      <version>${protobuf.version}</version>
    </dependency>
    <!-- TEST SCOPE -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>junit-vintage-engine</artifactId>
          <groupId>org.junit.vintage</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-batch-test</artifactId>
      <groupId>org.springframework.batch</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <description>Passive DNS data loader</description>
  <groupId>com.hitnslab.dns-security</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>pdns-data-loader</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.2.4.RELEASE</version> <!-- lookup parent from repository -->
  </parent>
  <profiles>
    <profile>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <groupId>org.springframework.boot</groupId>
          </plugin>
        </plugins>
      </build>
      <id>jar</id>
    </profile>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>native-image-maven-plugin</artifactId>
            <configuration>
              <buildArgs>
                --verbose
                --no-server
                --no-fallback
                --initialize-at-build-time
                -H:+TraceClassInitialization
                -H:+ReportExceptionStackTraces
                --allow-incomplete-classpath
                --report-unsupported-elements-at-runtime
                -DremoveUnusedAutoconfig=true
              </buildArgs>
              <imageName>${project.artifactId}</imageName>
              <skip>${skipNativeImage}</skip>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>native-image</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <groupId>org.graalvm.nativeimage</groupId>
            <version>${graalvm.version}</version>
          </plugin>
          <plugin>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <groupId>org.springframework.boot</groupId>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <artifactId>graal-sdk</artifactId>
          <groupId>org.graalvm.sdk</groupId>
          <scope>provided</scope>
          <version>${graalvm.version}</version>
        </dependency>
        <dependency>
          <artifactId>spring-graal-native-image</artifactId>
          <groupId>com.github.spring-projects-experimental</groupId>
          <version>081d2773e4b92d57c3c7408bd57a7d00c7243d24</version>
        </dependency>
      </dependencies>
      <id>graal</id>
      <properties>
        <graalvm.version>19.3.1</graalvm.version>
        <start-class>com.hitnslab.dnssecurity.pdnsdataloader.PDNSDataLoaderApplicationKt
        </start-class>
      </properties>
      <repositories>
        <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
        </repository>
      </repositories>
    </profile>
  </profiles>

  <properties>
    <java.version>1.8</java.version>
    <kotlin.version>1.3.61</kotlin.version>
    <protobuf.version>3.11.0</protobuf.version>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://maven.aliyun.com/repository/public</url>
    </repository>
  </repositories>

  <version>0.0.1-SNAPSHOT</version>

</project>
